starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_named.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { blockHeight } from starstream:std/cardano;"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "blockHeight",
                    span: 9..20,
                },
                local: Identifier {
                    name: "blockHeight",
                    span: 9..20,
                },
            },
        ],
    ),
    from: Wit {
        namespace: Identifier {
            name: "starstream",
            span: 28..38,
        },
        package: Identifier {
            name: "std",
            span: 39..42,
        },
        interface: Some(
            Identifier {
                name: "cardano",
                span: 43..50,
            },
        ),
    },
}
