starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_named_multiple.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { blockHeight, now } from starstream:std/cardano;"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "blockHeight",
                    span: 9..20,
                },
                local: Identifier {
                    name: "blockHeight",
                    span: 9..20,
                },
            },
            ImportNamedItem {
                imported: Identifier {
                    name: "now",
                    span: 22..25,
                },
                local: Identifier {
                    name: "now",
                    span: 22..25,
                },
            },
        ],
    ),
    from: Wit {
        namespace: Identifier {
            name: "starstream",
            span: 33..43,
        },
        package: Identifier {
            name: "std",
            span: 44..47,
        },
        interface: Some(
            Identifier {
                name: "cardano",
                span: 48..55,
            },
        ),
    },
}
