starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_named_trailing_comma.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { add, sub, } from \"./helpers/math.star\";"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "add",
                    span: 9..12,
                },
                local: Identifier {
                    name: "add",
                    span: 9..12,
                },
            },
            ImportNamedItem {
                imported: Identifier {
                    name: "sub",
                    span: 14..17,
                },
                local: Identifier {
                    name: "sub",
                    span: 14..17,
                },
            },
        ],
    ),
    from: Path(
        StringLiteral {
            value: "./helpers/math.star",
            span: 26..47,
        },
    ),
}
