starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_named_with_alias.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { blockHeight as height } from starstream:std/cardano;"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "blockHeight",
                    span: 9..20,
                },
                local: Identifier {
                    name: "height",
                    span: 24..30,
                },
            },
        ],
    ),
    from: Wit {
        namespace: Identifier {
            name: "starstream",
            span: 38..48,
        },
        package: Identifier {
            name: "std",
            span: 49..52,
        },
        interface: Some(
            Identifier {
                name: "cardano",
                span: 53..60,
            },
        ),
    },
}
