starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_namespace.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport context from starstream:std;"
---
ImportDef {
    items: Namespace(
        Identifier {
            name: "context",
            span: 7..14,
        },
    ),
    from: Wit {
        namespace: Identifier {
            name: "starstream",
            span: 20..30,
        },
        package: Identifier {
            name: "std",
            span: 31..34,
        },
        interface: None,
    },
}
