starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_path_named.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { add } from \"./helpers/math.star\";"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "add",
                    span: 9..12,
                },
                local: Identifier {
                    name: "add",
                    span: 9..12,
                },
            },
        ],
    ),
    from: Path(
        StringLiteral {
            value: "./helpers/math.star",
            span: 20..41,
        },
    ),
}
