starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_path_named_alias.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { add as plus } from \"./helpers/math.star\";"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "add",
                    span: 9..12,
                },
                local: Identifier {
                    name: "plus",
                    span: 16..20,
                },
            },
        ],
    ),
    from: Path(
        StringLiteral {
            value: "./helpers/math.star",
            span: 28..49,
        },
    ),
}
