starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_path_namespace.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport math from \"./helpers/math.star\";"
---
ImportDef {
    items: Namespace(
        Identifier {
            name: "math",
            span: 7..11,
        },
    ),
    from: Path(
        StringLiteral {
            value: "./helpers/math.star",
            span: 17..38,
        },
    ),
}
