starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__import__tests__import_path_parent_relative.snap
---
source: starstream-compiler/src/parser/definition/import.rs
description: "Code:\n\nimport { foo } from \"../shared/util.star\";"
---
ImportDef {
    items: Named(
        [
            ImportNamedItem {
                imported: Identifier {
                    name: "foo",
                    span: 9..12,
                },
                local: Identifier {
                    name: "foo",
                    span: 9..12,
                },
            },
        ],
    ),
    from: Path(
        StringLiteral {
            value: "../shared/util.star",
            span: 20..41,
        },
    ),
}
